--- a/src/index.css
+++ b/src/index.css
@@ -12,4 +12,16 @@
 	.heart-icon {
 		@apply w-7 h-7 border rounded-full flex justify-center items-center cursor-pointer right-2 top-2;
 	}
+	html,
+	body,
+	#app {
+		@apply h-full;
+	}
+	#app {
+		@apply flex flex-col;
+	}
+
+	main {
+		@apply grow;
+	}
 }
